...
        android:theme="@style/EditText.Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/text_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msg_new_password"
            android:inputType="textPassword"
            android:textColorHint="?colorTextHintEditText" />
    </com.google.android.material.textfield.TextInputLayout>
...
        android:theme="@style/EditText.Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_new_password">

        <EditText
            android:id="@+id/text_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msg_confirm_password"
            android:inputType="textPassword"
            android:textColorHint="?colorTextHintEditText" />
    </com.google.android.material.textfield.TextInputLayout>
...
