<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_password"
        android:icon="@drawable/ic_check_white_24dp"
        android:title="@string/action_confirm_password" />
</menu>