<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".profile.ui.ProfileFragment">

    <include
        android:id="@+id/layout_app_bar"
        layout="@layout/app_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_app_bar">

        <LinearLayout
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/screen_edge_left_and_right_margins"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <include
                android:id="@+id/layout_avatar_profile"
                layout="@layout/avatar_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp" />

            <TextView
                android:id="@+id/text_status"
                style="@style/Profile.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status" />

            <TextView
                style="@style/Profile.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_name" />

            <EditText
                android:id="@+id/text_name"
                style="@style/Profile.EditText"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_person_black_20dp"
                android:hint="@string/msg_profile_name_hint"
                android:inputType="textCapWords"
                android:textColorHint="?colorTextHintEditText" />

            <TextView
                style="@style/Profile.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_username" />

            <EditText
                android:id="@+id/text_username"
                style="@style/Profile.EditText"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_at_black_20dp"
                android:hint="@string/msg_profile_username_hint"
                android:inputType="text"
                android:textColorHint="?colorTextHintEditText" />

            <TextView
                style="@style/Profile.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_email" />

            <EditText
                android:id="@+id/text_email"
                style="@style/Profile.EditText"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/ic_email_black_20dp"
                android:hint="@string/msg_profile_email_hint"
                android:inputType="textEmailAddress"
                android:textColorHint="?colorTextHintEditText" />
        </LinearLayout>

    </ScrollView>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/view_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:indicatorColor="?colorLoading"
        app:indicatorName="BallPulseIndicator" />

    <View
        android:id="@+id/view_dim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDim"
        android:visibility="gone" />

    <include
        android:id="@+id/layout_update_avatar_options"
        layout="@layout/update_avatar_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone" />

</RelativeLayout>