...
    <string name="title_rate_us">Rate Us</string>
    <string name="title_admin_panel">Admin panel</string>
    <string name="title_password">Change Password</string>
    <string name="title_update_profile">Update profile</string>
    <string name="title_create_channel">Create Channel</string>
    <string name="title_license">License</string>
    <string name="title_are_you_sure">Are you sure?</string>
    <string name="title_choose_language">Choose Language</string>
    <string name="title_channel_details">Channel Details</string>
    <string name="title_topic">Topic</string>
    <string name="title_announcement">Announcement</string>
    <string name="title_description">Description</string>

...
    <string name="msg_delete_account">Delete account</string>
    <string name="msg_change_status">Change status</string>

    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
        <item>German</item>
        <item>Spanish</item>
        <item>Persian</item>
        <item>French</item>
        <item>Hindi (IN)</item>
        <item>Italian</item>
        <item>Japanese</item>
...
    <string name="msg_no_data_to_display">No data to display</string>
    <string name="msg_check_this_out">Check this out</string>
    <string name="msg_share_using">Share using</string>
    <string name="msg_dynamic_link_description" translatable="false">Chat with %1$s on %2$s</string> <!-- TODO Make translatable and add translations -->
    <string name="msg_profile_updated_successfully">Profile updated successfully</string>
    <string name="msg_username">Username</string>
    <string name="msg_profile_username_hint" translatable="false">Please enter your username</string> <!-- TODO Make translatable and add translations -->
    <string name="msg_username_or_email">Username or email</string>
    <string name="msg_password">Password</string>
    <string name="msg_name">Name</string>
    <string name="msg_profile_name_hint" translatable="false">Please enter your name…</string>
    <string name="msg_email">Email</string>
    <string name="msg_profile_email_hint" translatable="false">Please enter your email address</string> <!-- TODO Make translatable and add translations -->
    <string name="msg_avatar_url">avatar URL</string>
    <string name="msg_or_continue_using_social_accounts">Or continue using social accounts</string>
    <string name="msg_new_user">New user? %1$s</string>
    <string name="msg_forgot_your_password">Forgot your password?</string>
    <string name="msg_reset">Reset</string>
    <string name="msg_check_your_email_to_reset_your_password">Email sent! Check your inbox to reset your password.</string>
...
