...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/image_avatar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
...

                <TextView
                    android:id="@+id/text_display_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/text_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/text_contact_us"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
            //--------------------------------------------------------------
            <TextView
                android:id="@+id/text_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/text_review_this_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/text_share_this_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/text_license"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/text_app_version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/text_server_version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/text_send_crash_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/text_send_crash_report_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/text_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/text_delete_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
